# denumic

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  publish.yml
src/: impl.rs  lib.rs  uid.rs  utils.rs
